# ai-coach-disc

./: .editorconfig  .env  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  database_models.py  docker-compose.yml  excuses.py  model.py  pyproject.toml  requirements.txt  seed_database.py
.github/workflows/: main.yaml
backend/: ai_model.py  app.py  model.py  models.py  seed_database.py
backend/prompts/disc/: chat_with_participant.txt  gpt_vision.txt  summary_pdf.txt
client/: Dockerfile  Dockerfile-prod  package.json
client/public/: manifest.json
client/src/: App.css  ChatApp.css  ChatApp.js  config.js  data.js  index.css  index.js
client/src/components/BioBox/: BioBox.css
client/src/contexts/: chat.js
client/src/utils/: useToken.js
conf/: docker-dev.yml
ec2/: nginx.default
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  ChatApp.css  ChatApp.js  ChatSelection.css  ChatSelection.js  config.js  helpers.js  index.css  index.js
frontend/src/contexts/: chat.js
frontend/src/utils/: useToken.js
old/: .gitignore  README.md  requirements.txt
old/client/: package-lock.json
old/client/public/: index.html
old/client/src/: App.js  ChatApp.css  config.js  helpers.js
old/conf/: docker-prod.yml  nginx-dev.conf  nginx-prod.conf
old/scripts/: dev.sh
old/server/: Dockerfile  app.py  appserver.py  gunicorn_config.py  loader.py  model.py  requirements.txt  schema.sql  test_model.py  test_model_chat.py  test_retriever.py
old/server/data/: donnie.txt  jamal.txt  lauren.txt  shonda.txt
old/server/disc_data/: 1. Concepto DISC.md  2. Aplicaciones.md  3. Terminología del PPA.md  4. Lectura del perfil.md  5. Perfil del puesto.md  6. Ajuste con el puesto.md  7. Retroalimentación.md
prompts/disc/: chat.txt  gpt_vision.txt
scripts/: admin_scripts.py  prod.sh
server/: Dockerfile  app.py  appserver.py  gunicorn_config.py  loader.py  model.py  requirements.txt  schema.sql  test_model.py  test_model_chat.py  test_retriever.py
server/data/: donnie.txt  jamal.txt  lauren.txt  shonda.txt
server/disc_data/: 2. Aplicaciones.md  3. Terminología del PPA.md  4. Lectura del perfil.md  5. Perfil del puesto.md  6. Ajuste con el puesto.md  7. Retroalimentación.md
(+38 files in other folders)
