[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aipersona"
version = "1.0.0"
description = "AI persona"
authors = [
    "Franco Morero <franco.morero@bairesdev.com>",
]
license = "Proprietary"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
flask-jwt-extended = "4.6.0"
flask-sqlalchemy = "3.1.1"
bcrypt = "4.2.0"
pdf2image = "^1.17.0"
python-dotenv = "^1.0.1"
flask-cors = "^5.0.0"
langchain = "^0.3.7"
langchain-openai = "^0.2.6"
six = "^1.16.0"
flask-admin = "^1.6.1"
flask-basicauth = "^0.2.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[tool.isort]
profile = "black"
known_first_party = [
]

[tool.pytest.ini_options]
env = []
